changed header font-size

--- a/css/main.css
+++ b/css/main.css
@@ -293,6 +293,7 @@ section {
   /* line 253, ../sass/main.scss */
   .container h2 {
     margin: 25px 10px 25px 10px;
+    font-size: 1.3em;
   }
 
   /* line 257, ../sass/main.scss */
