--- a/css/main.css
+++ b/css/main.css
@@ -314,4 +314,10 @@ section {
     width: 100%;
     margin-left: -30px;
   }
+  
+  .container {
+    width: 100%;
+    margin-left: -20px;
+  }
+}
 }
