--- a/css/main.css
+++ b/css/main.css
@@ -319,5 +319,13 @@ section {
     width: 100%;
     margin: 90px 0 0 0;
   }
+  
+}  
+  
+  @media screen and (min-width: 1600px) {
+    .project-img {
+      width: 50%;
+  }
 }
+
 
